main div element now overflows correctly

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -5,6 +5,6 @@
     flex-wrap: wrap;
     width: 100%;
     min-height: 84vh;
-    height: 84vh;
+    height: 100%;
     overflow: auto;
 }
