--- a/src/components/EmployeeView/employeeView.module.css
+++ b/src/components/EmployeeView/employeeView.module.css
@@ -1,15 +1,7 @@
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100vh;
-  }
   
   .roster-container {
     background-color: rgb(207, 206, 206);
-    width: 80%;
+    width: 70%;
     height: 80%;
     border-radius: 13px 13px 0 0;
   }
