--- a/src/styles.css
+++ b/src/styles.css
@@ -12,18 +12,15 @@
   }
   body {
     width: 100vw;
-    height: 100%;
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.back-drop {
-  position: absolute;
+#root {
   width: 100%;
-  height: 100vh;
-  z-index: 100;
-  background-color: rgba(0,0,0,0);
+  height: 100%;
 }
+
